--- a/index.css
+++ b/index.css
@@ -82,6 +82,12 @@ background-color: #ffffff;}
 .imie:hover{
   transform: scale(110%);
 }
+
+@media (max-width: 600px) {
+  .imie {
+height: 0px;
+  }
+}
 .kty {
   margin-right:5%;
   text-decoration: none;
@@ -101,13 +107,14 @@ background-color: #ffffff;}
 @media (max-width: 600px) {
   .kty {
     display: flex;
+    flex-direction: column;
   text-decoration: none;
   gap: 10px;
   justify-content: center;
   align-items: center;
-  height: auto;
+  height: top;
   background-color: #efe7e4;
-  width: auto;
+  width: top;
   max-width: 100%;
   }
 }
@@ -272,7 +279,7 @@ a{
   border-radius: 24px; /* zaokrąglone rogi */
   color: rgb(0, 0, 0);
     animation: Animacia3 1.5s ease-out forwards;
-    font-size: 100%; /*20px*/
+    font-size: 130%; /*20px*/
     transition: transform 0.3s ease;
     padding: 7px;
   }
@@ -296,6 +303,19 @@ a{
     animation: slideFromLeft 1.2s ease-out forwards;
     margin-top: 1%;
 }
+
+@media (max-width: 600px) {
+  .p1 {
+        animation: none;
+    margin-top: 1%;
+  }
+}
+
+
+
+
+
+
 
 .div11{
   padding: 2%;
@@ -592,23 +612,29 @@ color: #000000;
   color: rgb(0, 0, 0);
   cursor: pointer;
   padding: 10px 20px;
+  z-index: 1001;
 }
 
 /* 🔹 Mobilne zachowanie */
 @media (max-width: 768px) {
   .menu-toggle {
     display: block; /* pokaż przycisk */
+        flex-direction: column;   
   }
 
   /* Ukryj Twoje menu na telefonach */
   #menu {
+
+    height: 35%;
+    justify-content: flex-start;
+      z-index: 1000;
     display: none;
     flex-direction: column;
-    background: #333; /* możesz zmienić na swój kolor */
+    background: #efe7e4; /* możesz zmienić na swój kolor */
     position: absolute;
     top: 60px;
-    right: 0;
-    width: 250px;
+    left: 0;
+    width: 300px;
     padding: 15px;
     border-radius: 8px;
   }
@@ -616,5 +642,6 @@ color: #000000;
   /* Gdy klikniesz – menu się pojawia */
   #menu.show {
     display: flex;
+    flex-direction: column;   
   }
 }
