--- a/index.css
+++ b/index.css
@@ -208,7 +208,7 @@ height: 0px;
 
     /* Gradient + obraz */
     background-image:
-        url(https://raw.githubusercontent.com/dawidmozdzonek-netizen/Website1/main/1000002076.jpg);
+        url("https://raw.githubusercontent.com/dawidmozdzonek-netizen/Website1/main/1000002076.jpg");
     background-position: -90px;
     background-size: 1200px auto;
     background-repeat: no-repeat;
@@ -645,3 +645,4 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
