--- a/index.css
+++ b/index.css
@@ -236,7 +236,7 @@ height: 0px;
 
     /* Gradient + obraz */
     background-image:
-        url(/Users/dawid/Desktop/stronaM/1000002076.jpg);
+        url("https://raw.githubusercontent.com/dawidmozdzonek-netizen/Website1/main/1000002076.jpg");
     background-position: -90px;
     background-size: 600px auto;
     background-repeat: no-repeat;
@@ -645,4 +645,5 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
 
