--- a/index.css
+++ b/index.css
@@ -255,7 +255,17 @@ height: 0px;
     background-size: 1200px auto;
     border-radius: 2%;
 }
-
+@media (max-width: 600px) {
+  .ing:hover {
+      width: 300px;
+    height: 300px;
+        background-image: 
+        url("https://raw.githubusercontent.com/dawidmozdzonek-netizen/Website1/main/1000002076.jpg");
+    background-position: -90px;
+    background-size: 1200px auto;
+    border-radius: 2%; zmieniać np. overlay, multiply, screen */  
+  }
+}
 a{
     text-decoration: none;
     text-decoration-color: #000000;
@@ -647,6 +657,7 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
 
 
 
