--- a/index.css
+++ b/index.css
@@ -236,6 +236,10 @@ height: 0px;
     border-radius: 50%;
     transition: border-radius 0.4s ease;
 
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+
     /* Gradient + obraz */
     background-image:
         url("https://raw.githubusercontent.com/dawidmozdzonek-netizen/Website1/main/1000002076.jpg");
@@ -257,8 +261,8 @@ height: 0px;
 }
 @media (max-width: 600px) {
   .ing:hover{
-      width: 600px;
-    height: 600px;
+      width: 300px;
+    height: 300px;
         background-image: 
         url("https://raw.githubusercontent.com/dawidmozdzonek-netizen/Website1/main/1000002076.jpg");
     background-position: -90px;
@@ -657,6 +661,7 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
 
 
 
