--- a/index.css
+++ b/index.css
@@ -389,7 +389,18 @@ article:hover{
     text-align: justify;
   align-items: center;
   justify-content: center;
+  font-size: 12px;
+}
+
+
+@media (max-width: 600px) {
+  .podp{
+  color: aliceblue;
+    text-align: justify;
+  align-items: center;
+  justify-content: center;
   font-size: 20px;
+  }
 }
 .centrum2 {
   display: flex;   
@@ -686,6 +697,7 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
 
 
 
