--- a/index.css
+++ b/index.css
@@ -398,6 +398,7 @@ article:hover{
   color: aliceblue;
     text-align: justify;
   align-items: center;
+  padding: 3%;
   justify-content: center;
   font-size: 20px;
   }
@@ -697,6 +698,7 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
 
 
 
