--- a/index.css
+++ b/index.css
@@ -390,6 +390,7 @@ article:hover{
   align-items: center;
   justify-content: center;
   font-size: 12px;
+  padding: 3%;
 }
 
 
@@ -698,6 +699,7 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
 
 
 
