--- a/index.css
+++ b/index.css
@@ -191,7 +191,7 @@ nav li {
   margin-top: 40PX;
     line-height: 50px;
     color: rgb(0, 0, 0);
-  font-size: clamp(10px, 3vw, 18px);
+  font-size: clamp(12px, 3vw, 18px);
     
 }
 @media (max-width: 600px) {
@@ -200,6 +200,7 @@ nav li {
     line-height: 30px;
     color: rgb(0, 0, 0);
   font-size: 12px;
+color: tgb(0, 0, 0)
   }
 }
 
@@ -401,7 +402,7 @@ article:hover{
   align-items: center;
   padding: 3%;
   justify-content: center;
-  font-size: 20px;
+  font-size: 9px;
   }
 }
 .centrum2 {
@@ -699,6 +700,7 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
 
 
 
