--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@ background-color: #ffffff;}
     align-items: center;
     justify-items: left;
     transition: transform 0.2s ease;
-    font-size: clamp(16px, 5vw, 50px);
+    font-size: 50px;
     width: 30%;
     color: rgb(0, 0, 0);
     height: auto; 
@@ -92,8 +92,8 @@ background-color: #ffffff;}
 }
 
 @media (max-width: 600px) {
-  .imie {
-height: 0px;
+.imie {
+  height: 0px;
   }
 }
 nav {
@@ -906,6 +906,7 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
 
 
 
