--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ background-color: #ffffff;}
 
 @media (max-width: 600px) {
 .imie {
-  height: 0px;
+  display: none;
   }
 }
 nav {
@@ -906,6 +906,7 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
 
 
 
