--- a/index.css
+++ b/index.css
@@ -887,8 +887,8 @@ align-items: center;
 align-content: center;
 text-align: center;
   position:fixed;
-  top: 800px;       /* odległość od góry */
-  left: 1730px;         /* od lewej */
+  top: 90%;       /* odległość od góry */
+  left: 90%;         /* od lewej */
 
     width: 70px;
     height: 70px;
@@ -903,18 +903,48 @@ text-align: center;
     background-blend-mode: overlay; /* można zmieniać np. overlay, multiply, screen */  
 }
 
+
+@media (max-width: 600px) {
+.menues{
+
+align-items: center;
+align-content: center;
+text-align: center;
+  position:fixed;
+  top: 90%;       /* odległość od góry */
+  left: 80%;         /* od lewej */
+
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    transition: border-radius 0.4s ease;
+
+    /* Gradient + obraz */
+    background-color: #c9b3abaa;
+    background-position: -90px;
+    background-size: 1200px auto;
+    background-repeat: no-repeat;
+    background-blend-mode: overlay; /* można zmieniać np. overlay, multiply, screen */  
+}
+}
+
 .menues .material-symbols-outlined{
 transform: rotate(90deg);
 color: #000000;
 }
 .menues:hover{
-    background-color: #e7e7e7aa;
+    background-color: #c9b3abaa;
+
+}
+
+.menues:active{
+    background-color: #f4eee9aa;
 
 }
 
 
 .active {
-  background-color:#dbcdc8; /* kolor klikniętego */
+  background-color:#dac6bf; /* kolor klikniętego */
 }
 
 .menu-toggle {
