--- a/index.css
+++ b/index.css
@@ -591,6 +591,37 @@ margin-bottom: 30px;
   align-items: center;
   height: auto;                   /* wysokość dopasowana do zawartości */
 }
+
+
+@media (max-width: 600px) {
+.zeg {
+  padding: 4%;
+  align-items: center;
+  justify-items: center;
+  gap: 10px;
+  width: 100%;                   
+  flex-wrap: wrap;    
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;                   /* wysokość dopasowana do zawartości */
+}
+}
+.sytuacje{
+    align-items: center;
+  justify-items: center;
+  width: 20%;                    /* wypełnia całą szerokość .obraz2 */
+  aspect-ratio: 3 / 2;            /* proporcje flagi 2:3 */
+  border-radius: 8px;
+  transition: border-radius 0.4s ease;
+  background-size: cover;         /* wypełnia cały div */
+  background-position: center;    /* wyśrodkowanie */
+  background-repeat: no-repeat;
+  transition: transform 0.5s ease;
+}
+
+
+@media (max-width: 600px) {
 .sytuacje{
     align-items: center;
   justify-items: center;
@@ -603,6 +634,11 @@ margin-bottom: 30px;
   background-repeat: no-repeat;
   transition: transform 0.5s ease;
 }
+}
+
+
+
+
 .sytuacje:hover{
     transform:scale(140%)
 }
@@ -986,6 +1022,7 @@ color: #000000;
     flex-direction: column;   
   }
 }
+
 
 
 
