--- a/index.css
+++ b/index.css
@@ -1675,20 +1675,20 @@ transition: background-size 0.7s ease-in-out;
 
 .ameryka{
   background-color: #e7e7e7;
-    background-image: url(/Users/dawid/Downloads/pexels-camcasey-1334607.jpg);
+    background-image: url(./zd_daw/pexels-camcasey-1334607.jpg);
 }
 .afryka{
     background-color: #e7e7e7;
-  background-image: url(/Users/dawid/Downloads/pexels-the-trvlr-1731660.jpg);
+  background-image: url(./zd_daw/pexels-the-trvlr-1731660.jpg);
 }
 .europa{
   background-color: #e7e7e7;
-    background-image: url(/Users/dawid/Downloads/pexels-dev-gandhi-830996-35535222.jpg);
+    background-image: url(./zd_daw/pexels-dev-gandhi-830996-35535222.jpg);
 
 }
 .azja{
   background-color: #e7e7e7;
-    background-image: url(/Users/dawid/Downloads/pexels-javon-swaby-197616-2797526.jpg);
+    background-image: url(./zd_daw/pexels-javon-swaby-197616-2797526.jpg);
 }
 .ul-kraje{
   position: relative;
