--- a/index.css
+++ b/index.css
@@ -50,18 +50,18 @@ STRONA OGULNE – CSS / NAWIGACJA MENU na mobilki
 
   .nav{
     position: fixed;
-    top: 5vh;
+    top: 7vh;
     left: 0;
 
     width: 75%;
-    height: 95vh !important;
+    height: 93vh !important;
 
     background: #ffffff;
     padding: 2rem;
 
     transform: translateX(-100%);
     transition: transform 0.3s ease;
-
+    padding-bottom: 4rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -83,6 +83,10 @@ STRONA OGULNE – CSS / NAWIGACJA MENU na mobilki
 
   .anno{
     margin-top: auto;
+        justify-content: center;
+    align-content: center;
+    align-items: center;
+    justify-items: center;
   }
 }
 
@@ -123,17 +127,18 @@ STRONA OGULNE – CSS / NAWIGACJA MENU z x ponizej 768 (telefony tablety)
 ========================================== */
 .X-menu{
   background-color: #002dbf;    
-  background-color:rgba(211, 211, 211, 0.82);
+  background-color:rgba(235, 235, 235, 0.82);
 }
 @media (max-width: 768px) {
   .X-menu {
     position: fixed;
     top: 0;
     left: 0;
-    padding: 2%;
+    padding: 5%;
     width: 100%;
     /* ZAMIAST 5vh użyj px: */
-    height: 5svh; 
+    height: 7svh; 
+    align-content: center;
     z-index: 2000;
     /* Dodaj to, żeby "zamrozić" element: */
     transform: translateZ(0);
@@ -190,7 +195,7 @@ efekt zminy burgera na x-a
   height: 2px;
   color: #ffffff;
   background-color: #000000;
-  width: 100%;
+  width: 150%;
   border-radius: 2px;
   transition: 0.3s ease;
 }
@@ -298,7 +303,6 @@ STRONA OGULNE – CSS / NAWIGACJA - PRZYCISK (dołącz do nas)
 width: 300px;
 margin-right: 0%;
 font-family: sans-serif;
-
 color: #000000;
 }
 
@@ -381,7 +385,7 @@ box-shadow: 0px 0px 15px black;
 }
 @media (max-width: 768px){
 .naglowek{
-height: 60svh;
+height: 50svh;
 }
 }
 
@@ -1387,13 +1391,8 @@ background-color: #000000;
 }
 @media (max-width: 768px) {
   .footer-links{
-  display: flex;        
-  align-content: center;
-  justify-content: center; 
-  align-items: center;  
-  width: auto;
   height: 6rem;
-  background-color: #2b2b2b;
+  display:block;
   }
 }
 .nav-footer{
@@ -1430,7 +1429,8 @@ align-items: center;
   list-style: none;
   direction: none;
   gap: 2rem;
-  display: flex;         
+  display: flex;     
+  padding: 0%;    
   }
 }
 
@@ -1445,7 +1445,11 @@ background-color: #000000;
 color: white;
 padding: 2rem;
 }
-
+@media (max-width: 768px) {
+  .footer-copy{
+  font-size: 0.7rem;
+  }
+}
 
 /* ============================================================================================================================
 COOKIE 1 – CSS
@@ -1638,8 +1642,16 @@ width: 100%;
   width: 100%;
   text-align: center;
 }
+@media (max-width: 768px) {
+  .podoze-heder{
+    width: 100%;
+    font-size: 10px!important;
+    text-align: center;
+  }
+}
 .okontyntenty{
 display: flex;
+flex-wrap: wrap;
 gap: 0px;
 justify-content: center;
 justify-items: center;
@@ -1664,9 +1676,17 @@ align-content: center;
   background-position: center;
   background-repeat: no-repeat;
   width: 25%; /* Przykładowe wymiary */
+  min-width: 160px;
   object-fit: cover;    /* obraz wypełnia div */
 transition: background-size 0.7s ease-in-out;
   aspect-ratio: 4 / 4;
+}
+
+@media (max-width: 768px) {
+  .kontynet{
+    min-width: 50%;
+
+  }
 }
 .kontynet:hover{
   background-size: 110%;
@@ -1756,7 +1776,11 @@ background-color: #ffffff;
   border-color: #00000000;
 }
 
-
+@media (max-width: 768px){
+.zanzwa-kontynety{
+  font-size: 1rem;
+}
+}
 .galeria-divy{
   display: flex;
   align-items: flex-start;
@@ -1787,7 +1811,7 @@ text-align: center;
 .ramka3{
   flex: 1 1 40%;
   min-width: 300px;
-  z-index: 99;
+  z-index: -1;
 border: solid 1px;
 padding: 2%;
 border-color: #ff5e00;
@@ -1862,7 +1886,8 @@ justify-content: space-between;
     width: 100%;
     flex-wrap: wrap;
       background-color: #f1f1f1;
-      margin-top: 20rem;
+      margin-top: 1rem;
+      z-index: -2;
 }
 }
 
