--- a/index.css
+++ b/index.css
@@ -11,20 +11,16 @@ scroll-behavior: smooth;
 }
 
 body{
-background-color: #ffffff;
+background-color: var(--bg);
+  color: var(--text);
 }
 
-/* ciemny motyw */
-body.dark-theme {
-  background-color: #000000;
-  color: white;
-}
+
 
 /* ==========================================
 STRONA OGULNE – CSS / NAWIGACJA MENU
 ========================================== */
 .nav{
-
 justify-content: flex-end;
 gap: 30px;
 z-index: 10;
@@ -33,18 +29,11 @@ align-items: center;
 position: fixed;
 width: 100%;
 height: 100px;
-background-color:rgba(255, 255, 255, 0);
-/*background-color:rgba(0, 0, 0, 0.5);*/
-/*background-color:rgba(0, 0, 0, 0.641);*/
-/*background-color:rgba(0, 0, 0, 0.793);*/
+background-color: var(--przezroczyste-nav);
 list-style-type: none;
 transition: height 0.6s ease, gap 0.6s ease, border-bottom-color 0.9s ease; 
 }
 
-body.dark-theme nav{
-  background-color: #000000;
-  color: white;
-}
 /* ==========================================
 STRONA OGULNE – CSS / NAWIGACJA MENU na mobilki
 ========================================== */
@@ -60,9 +49,8 @@ STRONA OGULNE – CSS / NAWIGACJA MENU na mobilki
     width: 75%;
     height: 93vh !important;
 
-    background: #ffffff;
     padding: 2rem;
-
+    background-color: var(--bg-min-nav);
     transform: translateX(-100%);
     transition: transform 0.3s ease;
     padding-bottom: 4rem;
@@ -131,12 +119,11 @@ li:hover .lista {
 /* ==========================================
 STRONA OGULNE – CSS / NAWIGACJA MENU z x ponizej 768 (telefony tablety)
 ========================================== */
-.X-menu{
-  background-color: #002dbf;    
+.X-menu{   
   background-color:rgba(235, 235, 235, 0.82);
+  color: var(--text);
 }
 body.dark-theme .X-menu{
-  color: white;
     background-color:rgba(33, 33, 33, 0.82);
 }
 @media (max-width: 768px) {
@@ -226,14 +213,10 @@ body.dark-theme span{
 /* ==========================================
 zmniejszenie paska navigacji przy scrollowaniu patrz js 
 ========================================== */
-.nav.scrolled{
-
-}
-
 
 .ulul{
 display: flex;
-color: rgb(0, 0, 0);
+color: var(--text);
 align-items: center;
 list-style-type: none;
 gap: 20px;
@@ -243,14 +226,7 @@ flex-wrap: nowrap;
 }
 @media (max-width: 768px){
   .ulul{
-  display: flex;
-  color: white;
-  align-items: center;
-  list-style-type: none;
-  gap: 20px;
   font-size: 20px;
-  font-family: sans-serif;
-  flex-wrap: nowrap;
   text-align: center;
   }
 }
@@ -342,29 +318,15 @@ border-width: 1.0px;
 /* wypycha element w prawo */  
 text-decoration: none;
 cursor: pointer;
-color: rgb(0, 0, 0);
+color: var(--text);
 }
 
-/* ======
-wersja 2
-========= */
-.dolacz-do-nas-2{
-list-style-type: none;
-width: 30%;
-border-style: solid;
-border-width: 0.1px;
-padding: 10px;
-margin-left: auto;  /* wypycha element w prawo */  
-text-decoration: none;
-cursor: pointer;
-border: 0.1px solid #00bf63;
-color: #00bf63;
-}
+
 
 
 .dolacz-do-nas:hover{
-border: 0.1px solid #ff5e00;
-color: #ff5e00;
+border: 0.1px solid var(--accent);
+color: var(--accent);
 }
 
 
@@ -486,7 +448,7 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-weight: 700;
 margin-bottom: 30px;
 padding: 2%;
-color: #000000;
+color: var(--text);
 }
 body.dark-theme .heder2{
 color: #f5f5f5;
@@ -663,16 +625,9 @@ overflow-y: auto;
 @media (max-width: 768px) {
 .modal-content {
 margin-top: 7vh;
-display: flex;
-background: white;
 height: 80%;
 width: 80%;
 max-height: 86%;
-padding: 20px;
-position: relative;
-justify-content: center;
-align-items: center;
-overflow-y: auto;
 }
 }
 
@@ -717,30 +672,6 @@ height: auto;
 /* ============================================================================================================================
 STRONA 2 – CSS
 ============================================================================================================================ */
-.main-2{
-margin-left: 10%;
-margin-right: 10%;
-justify-items: center;
-justify-content: center;
-align-items: center;
-align-content: center;
-}
-body.dark-theme .main-2{
- background-color: #00000000;
- color: #f5f5f5;
-}
-@media (max-width: 768px) {
-  .main-2{
-  margin-left: 1%;
-  margin-right: 1%;
-  justify-items: center;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  }
-}
-
-
 
 h2{
 font-size: clamp(1rem, 13vw, 12rem);
@@ -825,10 +756,7 @@ h3{
   font-style: normal;
   }
 }
-.waza{
-  color: #009a31;
-  font-weight: 700;
-}
+
 .dc{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: clamp(1rem, 4vw, 4rem);
@@ -838,39 +766,6 @@ h3{
 /* ==========================================
 STRONA 2 – CSS BANER DOŁACZ DO NAS
 ========================================== */
-
-
-/* ==========
-DOŁĄCZ DO NAS
-=============*/
-.dolocz-heder{
-width: 50%;
-font-size: 3vw;
-color: #05220e;
-padding-left: 5%;
-padding-top: 12%;
-font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-weight: 800;
-font-style: normal;
-}
-
-body.dark-theme .dolocz-heder{
-color: #009a31;
-}
-
-.zespol{
-position: absolute;
-right: 10%;
-text-decoration: none;
-font-size: 2rem;
-color: #05220e;
-font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-weight: 600;
-font-style: normal;
-}
-body.dark-theme .zespol{
-color: #7ca489;
-}
 
 @media (max-width: 768px) {
   .dolocz-heder{
@@ -1026,167 +921,6 @@ body.dark-theme .formulaz{
 form{
   min-width: 23vh;
 }
-/* ==========================================
-FOOTER 1 – CSS wyglond okienek na wpisy
-========================================== */
-.formularz input, 
-.formularz textarea {
-width: 100%;
-padding: 8px;
-border: 1px solid #03210d;
-background-color: #3030300b;
-border-radius: 5px;
-font-size: 14px;
-margin-top: 3%; 
-margin-bottom: 3%;
-}
-
-/* ==========================================
-FOOTER 1 – INFORMACJE TYP: tel, email, imie
-========================================== */
-label{
-
-font-size: 25px;
-}
-
-
-/* ==========================================
-FOOTER 1 – CSS przycisk do wysyłania 
-========================================== */
-.formularz button {
-margin-top: 5%;
-padding: 10px;
-background-color: #063014;
-color: white;
-border: none;
-border-radius: 5px;
-cursor: pointer;
-transform: scale(1.3);
-}
-
-.formularz button:hover {
-background-color: #08411b;
-}
-
-
-/* ==========================================
-FOOTER 1 – CSS zgoda RODO
-========================================== */
-
-
-/* ========================
-RODO  PRZYCISK ZGODA
-=========================== */
-.label2{
-display: flex;
-align-items: flex-start;
-gap: 12px;
-text-align: left;
-}
-.zgoda-box{
-width: 10px !important;
-margin-top: 4px; 
-}
-
-
-/* ========================
-RODO TREŚĆ
-=========================== */
-.zgoda{
-width: 100%;
-padding: 2%;
-font-size: 20px;
-font-size: 1.1vh;
-font-weight: 500;
-}
-
-
-/* =============================================
-STRONA 2 – CSS BANER WESPRZYJ NAS + przycisk
-============================================= */
-.header-wsparcie{
-font-size: 3vw;
-color: #fafafa;
-font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-weight: 800;
-font-style: normal;
-}
-body.dark-theme .header-wsparcie{
-color: #009a31;
-}
-.wspacie{
-justify-items: center;
-width: 100%;
-height: 300px;
-text-align: center;
-font-weight: 750;
-padding: 1%;
-transition: background-color 0.3s ease, color 0.3s ease;
-margin-bottom: 10%;
-}
-
-@media (max-width: 768px) {
-  .wspacie{
-  justify-items: center;
-  width: 100%;
-  height: 170px;
-  text-align: center;
-  font-weight: 750;
-  padding: 1%;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  margin-bottom: 10%;
-  }
-}
-
-/* ==========================================
-STRONA 2 – CSS przycisk do wsparcia
-========================================== */
-.wesprzyj-button{
-margin-top: 3%;
-width: 30%;
-font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-weight: 750;
-padding: 1%;
-background-color: white;
-border-radius: 12px;
-
-transition: background-color 0.3s ease, color 0.3s ease;
-box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.211);
-}
-
-body.dark-theme .wesprzyj-button{
-background-color: rgba(255, 255, 255, 0.2);
-}
-@media (max-width: 768px) {
-.wesprzyj-button{
-margin-top: 3%;
-width: 55%;
-font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-weight: 750;
-padding: 1%;
-border-radius: 12px;
-background-color: white;
-border-radius: 0.25rem;
-border: solid 1px #08411b;
-transition: background-color 0.3s ease, color 0.3s ease;
-box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.211);
-
-}
-}
-
-
-body.dark-theme .wesprzyj-button:hover{
-background-color: #03210d;
-color: white;
-}
-.wesprzyj-button:hover{
-background-color: #03210d;
-color: white;
-}
-.a-wsparcie-przycisk {
-  text-decoration: none;
-  color: inherit;
-}
 
 
 /* ==========================================
@@ -1200,28 +934,17 @@ width: 30%;
 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-weight: 750;
 padding: 1%;
-background-color: white;
+background-color: var(--text);
 border-radius: 0.25rem;
 transition: background-color 0.3s ease, color 0.3s ease;
 border-radius: 12px;
 box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.211);
 }
 
-body.dark-theme .kontakt-button{
-background-color: rgba(255, 255, 255, 0.2);
-}
 @media (max-width: 768px) {
 .kontakt-button{
-margin-top: 3%;
 width: 55%;
-font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-weight: 750;
-padding: 1%;
 background-color: white;
-border-radius: 0.25rem;
-transition: background-color 0.3s ease, color 0.3s ease;
-border-radius: 12px;
-box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.211);
 }
 }
 
@@ -1329,7 +1052,7 @@ background-color: #ffffff;
 
 .opis-osoba{
   font-weight: 500;
-    hyphens: auto;
+  hyphens: auto;
   padding-left: 1rem;
   padding-right: 1em;
 }
@@ -1345,7 +1068,7 @@ FOOTER 1 – CSS
 
 .footer{
 /*background-color: #cbcbcb;*/
-background-color: #000000;
+background-color: black;
 }
 
 /* ==========================================
@@ -1366,7 +1089,6 @@ FOOTER 1 – CSS sekcja z ikonami mediów
 ========================================== */
 
 .media{
-background-color: f5f5f5;
 height: 100px;
 gap: 5%;
 display: flex;
@@ -1392,8 +1114,6 @@ border-color: #ffffff00;
 @media (max-width: 768px) {
   .mpun{
   display: flex;           /* flexbox dla samego mpun */
-  justify-content: center; /* wyśrodkowanie poziome ikony */
-  align-items: center;     /* wyśrodkowanie pionowe ikony */
   width: 45px;
   height: 45px;
   font-size: 2vh;
@@ -1459,11 +1179,7 @@ align-items: center;
 
 @media (max-width: 768px) {
   .nav-footer{
-  font-size: 2vh;
-  display: flex;        
-  align-content: center;
-  justify-content: center; 
-  align-items: center;  
+  font-size: 2vh;        
   }
 }
 
@@ -1480,10 +1196,7 @@ align-items: center;
 
 @media (max-width: 768px) {
   .ulul-foter{
-  list-style: none;
-  direction: none;
-  gap: 2rem;
-  display: flex;     
+  gap: 2rem;    
   padding: 0%;    
   }
 }
@@ -1608,16 +1321,13 @@ button {
 
 
 .edukacjia{
-  background-color: #f5f5f5;
+  color: var(--text);
   padding: 3%;
   display: flex;
     align-items: center;
   flex-wrap: wrap;
 }
-body.dark-theme .edukacjia{
-  background-color: #000000;
-  color: white;
-}
+
 body.dark-theme .edukacjia-header{
   background-color: #000000;
   color: white;
@@ -1632,7 +1342,6 @@ body.dark-theme .edukacjia-header{
   .text-edukacjia{
     background-color: #ffffff00;
     width: 100%;
-    min-width: 300px;
   }
 }
 .obraz-edukacjia{
@@ -1663,16 +1372,12 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-weight: 700;
 margin-bottom: 30px;
 padding: 2%;
-color: #000000;
+color: var(--text);
 }
 @media (max-width: 768px) {
   .edukacjia-header{
   font-size: 40px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
-  margin-bottom: 30px;
-  padding: 2%;
-  color: #000000;
   }
 }
 .text-p-edukacja{
@@ -1692,7 +1397,8 @@ justify-content: center;
 text-align: center;
 }
 .podroze{
-  background-color: #f5f5f5;
+  background-color: var(--bg);
+  color: var(--text);
 justify-content: center;
 justify-items: center;
 align-items: center;
@@ -1700,10 +1406,7 @@ align-content: center;
 width: 100%;
 }
 
-body.dark-theme .podroze{
-  background-color: #00000000;
-  color: white;
-}
+
 
 
 
@@ -1713,9 +1416,7 @@ body.dark-theme .podroze{
 }
 @media (max-width: 768px) {
   .podoze-heder{
-    width: 100%;
     font-size: 10px!important;
-    text-align: center;
   }
 }
 .okontyntenty{
@@ -1755,7 +1456,6 @@ transition: background-size 0.7s ease-in-out;
 @media (max-width: 468px) {
   .kontynet{
     min-width: 100%;
-
   }
 }
 .kontynet:hover{
@@ -1801,6 +1501,7 @@ max-height: 90%;/* 🔥 nie może zająć więcej niż połowę kafelka */
   font-size: clamp(10px, 9vw, 16px);  /* 🔥 skaluje się z ekranem */
 }
 }
+
 .podoze-heder{
     justify-content: center;
   justify-items: center;
@@ -1832,7 +1533,7 @@ max-height: 90%;/* 🔥 nie może zająć więcej niż połowę kafelka */
   justify-items: center;
   align-items: center;
   align-content: center;
-    border-color: #ff5e00;
+    border-color: var(--accent);
     border: solid 2px;
 font-size: 1.3rem;
   width: 4vh;
@@ -1851,12 +1552,10 @@ background-color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 700;
   align-content: center;
-  color: #000000;
+  color: var(--text);
   border-color: #00000000;
 }
-body.dark-theme .zanzwa-kontynety{
-  color: white;
-}
+
 @media (max-width: 768px){
 .zanzwa-kontynety{
   font-size: 1rem;
@@ -1879,9 +1578,10 @@ body.dark-theme .zanzwa-kontynety{
   min-width: 300px;
 border: solid 1px;
 padding: 2%;
-border-color: #ff5e00;
-background-color: #ffffff00;
+border-color: var(--accent);
+background-color: var(--bg);
 height: 100vh;
+color: var(--text);
 justify-content: center;
 text-align: center;
     position: sticky;
@@ -1891,17 +1591,10 @@ text-align: center;
 @media (max-width: 768px){
 .ramka3{
 padding: 0%;
-border-color: #ff5e00;
-background-color: #ffffff;
 height: 28vh;
 font-size: 2px!important;
-  top: 7vh; /* albo np. 80px jeśli masz header */
+top: 7vh; /* albo np. 80px jeśli masz header */
 }
-}
-
-body.dark-theme .ramka3{
-  background-color: #000000;
-  color: white;
 }
 .edukacjia-header2{
 font-size: 75px;
@@ -1909,7 +1602,7 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-weight: 700;
 margin-bottom: 30px;
 padding: 2%;
-color: #000000;
+color: var(--text);
 }
 @media (max-width: 768px){
 .edukacjia-header2{
@@ -1919,9 +1612,6 @@ padding: 0%;
 }
 }
 
-body.dark-theme .edukacjia-header2{
-  color: white;
-}
 .text-p-edukacja2{
   width: 100%;
   font-size: 22px;
@@ -1931,31 +1621,25 @@ body.dark-theme .edukacjia-header2{
 
 @media (max-width: 768px){
 .text-p-edukacja2{
-  width: 100%;
   font-size: 12px;
   padding: 2%;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 }
 .galeria-obrazy{
+  color: var(--text);
   flex: 1 1 70%;
   flex-wrap: wrap;
   padding: 5%;
   display: flex;
   gap: 2rem;
-  background-color: #f1f1f1;
+  background-color: var(--bg-secondary);
   height: 100%;
 }
-body.dark-theme .galeria-obrazy{
-  background-color: #0b0b0b;
-  color: white;
-}
-body.dark-theme .galeria-obrazy2{
-  background-color: #0b0b0b;
-  color: white;
-}
+
 
 .galeria-obrazy2{
+    background-color: var(--bg-secondary);
+color: var(--text);
 justify-content: center; /* Środkuje elementy w poziomie */
 justify-content: space-between;
 }
@@ -2002,4 +1686,31 @@ justify-content: space-between;
 .olol{
   color: #ffffff;
   text-align: center;
+}
+
+:root {
+  --bg-min-nav: #ffffff;
+  --przezroczyste-nav: #ffffff00;
+  --bg: #ffffff;
+  --bg-secondary: #f5f5f5;
+  --text: #000000;
+  --text-secondary: #575757;
+  --accent: #ff5e00;
+  --nav-bg: rgb(255, 255, 255);
+  --card-bg: #ffffff;
+  --modal-bg: #ffffff;
+  --x-menu:  rgba(235, 235, 235, 0.82);
+}
+
+body.dark-theme {
+  --bg-min-nav: #0b0b0b;
+  --bg: #000000;
+  --bg-secondary: #1e1e1e;
+  --text: #f5f5f5;
+  --text-secondary: #b5b5b5;
+  --accent: #ff5e00;
+  --nav-bg: rgba(0, 0, 0, 0.95);
+  --card-bg: rgba(0,0,0,0.5);
+  --modal-bg: rgba(0,0,0,0.9);    
+  --x-menu:  rgba(33, 33, 33, 0.82);
 }
