--- a/index.css
+++ b/index.css
@@ -749,13 +749,17 @@ h3{
 }
 @media (max-width: 768px) {
   h1{
-  font-size: clamp(1rem, 9vw, 8rem);
+  font-size: clamp(1rem, 14vw, 8rem);
   text-align: left;
   padding-left: 5vw;
   padding-top: 2vh;
   }
 }
-
+@media (max-width: 768px) {
+  h2{
+  font-size: clamp(1rem, 14vw, 8rem);
+  }
+}
 .dc{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: clamp(1rem, 4vw, 4rem);
