--- a/index.css
+++ b/index.css
@@ -1645,16 +1645,15 @@ justify-content: space-between;
 .ikonki-tylko-tel{
   display: flex;
   justify-content: center;
-  justify-items: center;
-  gap: 2rem;
+  gap: 21px;
   margin-bottom: 9rem;
+  align-items: center; 
 
 }
 }
 
 .pop{
   font-family: cursive;
-  align-content: center;
   font-size:1.3rem;
 }
 
