--- a/index.css
+++ b/index.css
@@ -344,8 +344,6 @@ STRONA 1 – CSS / dałem znacznie mniejsze padingi na mobilki
 @media (max-width: 768px){
   main{
   margin: 0 auto;
-  margin-left: 3vw !important;
-  margin-right: 3vw !important;
   }
 }
 
@@ -387,6 +385,7 @@ margin-bottom: 5rem;
 STRONA 1 – CSS /SEKCJIA DLCZEGO
 ========================================== */
 .section-dlaczego{
+margin: 3%;
 margin-top: 2vh;
 display: flex;
 flex-wrap: wrap; 
